# simple_shopping_list_bot

./: .gitignore  Cargo.toml
src/: data.rs  main.rs
