[package]
name = "einkaufslisten_bot"
version = "0.1.0"
authors = ["Simon Struck <simon@simonscode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.teloxide]
version = "~0.4"

[dependencies.teloxide-macros]
version = "~0.4"

[dependencies.log]
version = "~0.4"

[dependencies.pretty_env_logger]
version = "~0.4"

[dependencies.lazy_static]
version = "~1.4"

[dependencies.anyhow]
version = "~1.0"

[dependencies.serde_json]
version = "~1.0"

[dependencies.serde]
version = "~1.0"
features = ["derive"]

[dependencies.tokio]
version = "~1.5"
features = ["macros", "rt-multi-thread", "fs", "io-std", "io-util", "sync"]

[dependencies.tokio-stream]
version = "~0.1"
