[package]
name = "shopping_bot"
version = "0.1.0"
authors = ["Simon Struck <simon@simonscode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.teloxide]
version = "0.4.0"

[dependencies.teloxide-macros]
version = "0.4.0"

[dependencies.log]
version = "0.4.14"

[dependencies.pretty_env_logger]
version = "0.4.0"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.anyhow]
version = "1.0.40"

[dependencies.serde_json]
version = "1.0.64"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.tokio]
version = "1.6.1"
features = ["macros", "rt-multi-thread", "fs", "io-std", "io-util", "sync"]

[dependencies.tokio-stream]
version = "0.1.6"
